# super-auto-simulator

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yaml  run_tests.yml
sapai/: agents.py  graph.py
sapai/effect/: effects.py  events.py  target_filters.py  target_pools.py  targets.py  triggers.py
sapai/effect/targets/: __init__.py  filters.py  selectors.py  target_filters.py  target_generators.py  target_pools.py  target_selectors.py  targets.py
sapai/effects/: triggers.py
sapai/rewrite/: actions.py  effects.py  events.py  pets.py  teams.py  triggers.py  utils.py
sapai/rewrite/targets/: filters.py  selectors.py  target_generators.py
superautosim/: actions.py  events.py  pets.py  teams.py  triggers.py  typing.py  utils.py
superautosim/targets/: __init__.py  filters.py  selectors.py  target_generators.py
tests/: conftest.py  test_actions.py  test_events.py  test_pet_triggers.py  test_pets.py  test_teams.py  test_triggers.py  test_typing.py  test_utils.py
tests/effect/: test_events.py  test_triggers.py
tests/effect/targets/: test_target_filters.py  test_target_generators.py  test_target_pools.py  test_target_selectors.py
tests/rewrite/: conftest.py  test_actions.py  test_events.py  test_pets.py  test_teams.py  test_triggers.py
tests/rewrite/targets/: test_target_filters.py  test_target_generators.py  test_target_selectors.py
tests/targets/: test_target_filters.py  test_target_generators.py  test_target_selectors.py
