[tool.poetry]
name = "superautosim"
version = "0.1.0"
description = "Simulator for Super Auto Pets"
authors = ["JorVLP <47005135+JorVLP@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "superautosim" }
]

[tool.poetry.dependencies]
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipykernel = "^6.16.0"
pylint = "^2.15.5"
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
isort = "^5.11.4"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.basic]
# Minimum line length for functions/classes that require docstrings, shorter ones
# are exempt.
docstring-min-length = 5

ignore-patterns = ["^test_.*py"]
max-attributes = 12


[tool.pylint.format]
# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"

# Maximum number of characters on a single line.
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-config --cov=superautosim --cov-report=html"
testpaths = [
    "tests/",
]

[tool.isort]
profile="black"